[package]
name = "cistern"
version = "0.1.0"
authors = ["Markus Reiter <me@reitermark.us>"]
edition = "2018"

[dependencies]
ads1x1x = "*"
embedded-hal = "*"
linux-embedded-hal = { version = "*", optional = true }
measurements = "0.10"
medianheap = "*"
nb = "*"
rocket = { version = "0.4", optional = true }
rocket_contrib = { version = "0.4", default-features = false, features = ["json"], optional = true }
simple-signal = { version = "1", optional = true }

[features]
server = ["rocket", "rocket_contrib", "simple-signal", "linux-embedded-hal"]

[[bin]]
name = "cistern"
path = "src/main.rs"
required-features = ["server"]

[lib]
name = "cistern"
