[package]
name = "cistern"
version = "0.1.0"
authors = ["Markus Reiter <me@reitermark.us>"]
edition = "2018"
publish = false

[dependencies]
ads1x1x = "0.2"
embedded-hal = "0.2"
linux-embedded-hal = { version = "0.3", optional = true }
measurements = "0.11"
log = "0.4"
env_logger = "0.9"
medianheap = "0.3"
nb = "1.0"
simple-signal = { version = "1.1", optional = true }
webthing = "0.15"
serde_json = "1.0"
actix-rt = { version = "1.1", optional = true }

[features]
server = ["actix-rt", "simple-signal", "linux-embedded-hal"]

[[bin]]
name = "cistern"
path = "src/main.rs"
required-features = ["server"]

[lib]
name = "cistern"
