[package]
name = "cistern"
version = "0.1.0"
authors = ["Markus Reiter <me@reitermark.us>"]
edition = "2021"
publish = false

[dependencies]
ads1x1x = "0.2"
embedded-hal = "1"
linux-embedded-hal = { version = "0.4", optional = true }
measurements = "0.11"
nb = "1"
log = "0.4"
env_logger = "0.11"
medianheap = "0.4"
webthing = "0.15"
serde_json = "1"
actix-rt = { version = "2.7", optional = true }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
anyhow = "1"

[features]
server = ["actix-rt", "linux-embedded-hal"]

[[bin]]
name = "cistern"
path = "src/main.rs"
required-features = ["server"]

[lib]
name = "cistern"

[patch.crates-io]
ads1x1x = { git = "https://github.com/reitermarkus/ads1x1x-rs", branch = "split-api" }
# ads1x1x = { path = "../ads1x1x-rs" }
